# spam-detection-web

./: README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  streamlit_app.py
app/components/buttons/: analysis_button.py
app/components/feedback/: results_display.py
app/components/feedback/widgets/: classification_badge.py  confidence_indicator.py  technical_details.py
app/components/inputs/: mail_input.py
app/components/ui/: footer.py  header.py
app/services/: spam_detector.py
notebook/: process.ipynb
tests/services/: test_spam_detector.py
